# aztec

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat
AutoTest/: .gitignore  log_release.txt
AutoTest/LuaSubSystem/: LuaSubSystem.Lua
AutoTest/LuaSubSystem/Events/: EventDispatcher.Lua  Events.Lua
AutoTest/Scripts/: debug.lua  main.lua
AutoTest/Scripts/entities/: enemy.Lua  warrior.Lua
AutoTest/Scripts/projectiles/: enemyMissile.Lua  smallProjectile.Lua
AutoTest/Scripts/scenes/: fail.Lua  first_stage.Lua  success.Lua
AutoTest/Scripts/shields/: eletricShield.Lua
AutoTest/Scripts/test/: autotest.Lua  testParams.Lua
AutoTest/Scripts/tools/: CursorMouse.Lua  infoPanel.Lua  shaderCarrousel.Lua
AutoTest/shaders/: grayscale.fs
AutoTestBrowser/: config.ini  debug.bat  execute.bat
AutoTestBrowser/Assets/Image/: credits.txt
AutoTestBrowser/Assets/Music/: credits.txt
AutoTestBrowser/Assets/SFX/: credits.txt
AutoTestBrowser/Docs/: binding diagram.bpm
AutoTestBrowser/HTML/Editor/: index.html
AutoTestBrowser/HTML/OFFSCREENRender/: index.html
AutoTestBrowser/Scripts/: main.lua
AutoTestBrowser/Scripts/entities/: background.Lua  (+2 more)
AutoTestBrowser/shaders/: colorcrazyness.fs  dynamicLight.fs  oneminus.fs  white.fs  white.vs
Documentation/html/: _animation_8cpp.html  _animation_8h.html  _animation_8h_source.html  _auto_sensor_8cpp.html  _auto_sensor_8h.html  _auto_sensor_8h_source.html  _aztec___lua___bind_8cpp.html  _aztec___lua___bind_8h.html  _aztec___lua___bind_8h_source.html  _bitwise_8cpp.html  _bitwise_8h.html  _bitwise_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _config_8cpp.html  _config_8h.html  _config_8h_source.html  _contact_filter_8cpp.html  _contact_filter_8h.html  _contact_filter_8h_source.html  _contact_solver_8cpp.html  _contact_solver_8h.html  _contact_solver_8h_source.html  _debug_draw_8cpp.html  _debug_draw_8h.html  _debug_draw_8h_source.html  _event_dispatcher_8cpp.html  _event_dispatcher_8h.html  _event_dispatcher_8h_source.html  _event_types_8cpp.html  _event_types_8h.html  _event_types_8h_source.html  _font_8cpp.html  _font_8h.html  _font_8h_source.html  _frame_8cpp.html  _frame_8h.html  _frame_8h_source.html  _game_canvas_8cpp.html  (+291 more)
JRPG/: config.ini
JRPG/LuaSubSystem/: LuaSubSystem.Lua
JRPG/Scripts/: debug.lua  main.lua
JRPG/shaders/: default.fs  default.vs  grayscale.fs  oneminus.fs
app/: main.cpp
aztec/: CMakeLists.txt  config.ini
aztec/include/: Animation.h  AutoSensor.h  Aztec_Lua_Bind.h  Bitwise.h  Camera.h  Config.h  ContactFilter.h  ContactSolver.h  DebugDraw.h  EventDispatcher.h  EventTypes.h  Font.h  Frame.h  GameCanvas.h  GameEngine.h  GameObject.h  GameObjectList.h  GameStateController.h  Keyboard.h  LuaBinded.h  Mouse.h  Music.h  Plane.h  PointList2D.h  Property.h  PropertyList.h  PropertyManager.h  Rectangle.h  ResourceManager.h  ResourceTypes.h  Sensor.h  Shader.h  Shape.h  Sound.h  Sprite.h  SpriteSensor.h  Text.h  Texture.h  Transform.h  Vector2.h  (+3 more)
aztec/src/: Animation.cpp  AutoSensor.cpp  Aztec_Lua_Bind.bat  Aztec_Lua_Bind.cpp  Aztec_Lua_Bind.pkg  Bitwise.cpp  Camera.cpp  Config.cpp  ContactFilter.cpp  ContactSolver.cpp  DebugDraw.cpp  EventDispatcher.cpp  EventTypes.cpp  Font.cpp  Frame.cpp  GameCanvas.cpp  GameEngine.cpp  GameObject.cpp  GameObjectList.cpp  GameStateController.cpp  Keyboard.cpp  LuaBinded.cpp  Mouse.cpp  Music.cpp  Plane.cpp  PointList2D.cpp  PropertyList.cpp  PropertyManager.cpp  Rectangle.cpp  ResourceManager.cpp  Sensor.cpp  Shader.cpp  Shape.cpp  Sound.cpp  Sprite.cpp  SpriteSensor.cpp  Text.cpp  Texture.cpp  Transform.cpp  Vector2.cpp  (+4 more)
(+248 files in other folders)
